--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -33,6 +33,8 @@
 \newcommand{\designnote}[1]{\footnote{#1}}
 \newcommandx{\note}[1]{{\bf Note:} #1\\}
 
+\newcommandx{\fixme}[1]{{\bf \color{red}{FIXME}}\footnote{#1} \\}
+
 \newcommand{\encspace}{{\em custom1} }
 \newcommand{\encopcode}{$0101011$}
 
