Specifically go for RV32I, RV32E for now

--- a/docs/crypto-ise.introduction.tex
+++ b/docs/crypto-ise.introduction.tex
@@ -1,7 +1,8 @@
 
 
 The aim of this project is to
-extend the RISC-V architecture in order to accelerate common cryptographic
+extend the RISC-V RV32I or RV32E base architectures to
+accelerate common cryptographic
 operations associated with block ciphers.
 It proposes a new Instruction Set Extension (ISE)
 which acts analogously to a floating-point co-processor,
