Add bits to intro and put RISC-V in title!
 On branch spec/draft-2
 Changes to be committed:
	modified:   docs/crypto-ise.introduction.tex
	modified:   docs/crypto-ise.tex

 Changes not staged for commit:
	modified:   docs/crypto-ise.specification.tex

--- a/docs/crypto-ise.tex
+++ b/docs/crypto-ise.tex
@@ -5,7 +5,7 @@
 \usepackage{biblatex}
 \addbibresource{references.bib}
 
-\title{SCARV: Crypto ISE}
+\title{SCARV: RISC-V Crypto ISE}
 
 \begin{document}
 
