--- a/docs/crypto-ise.introduction.tex
+++ b/docs/crypto-ise.introduction.tex
@@ -1,9 +1,13 @@
 
 
 The aim of this project is to
-extend the RISC-V RV32I or RV32E base architectures to
-accelerate common cryptographic
-operations associated with block ciphers.
+extend the RISC-V RV32I or RV32E base architectures \footnote{
+ There is no reason that the ISE would not work with the
+ RV64I and RV128I base instruction sets. Though the ISE state
+ uses only 32-bit words, and would not take advantage of a
+ larger word size without further modification.
+} to accelerate common cryptographic
+operations associated with block ciphers and public key cryptography.
 It proposes a new Instruction Set Extension (ISE)
 which acts analogously to a floating-point co-processor,
 but targeted at cryptographic operations.
@@ -16,5 +20,12 @@ The key pieces of functionality the ISE aims to provide are:
 \item Flexible {\em packed arithmetic}, where multiple values of varying
     lengths can be operated on inside a register in parallel.
 \item Memory Scatter/Gather functionality for bytes.
+\item Flexible support for intra-word byte, halfword and nibble
+      permutation.
 \item Multi-precision integer arithmetic.
 \end{itemize}
+
+This document {\em is} a specification for an ISE. It {\em is not} an
+implementation guide \footnote{In fact, we go out of our way to make sure this
+ISE is applicable to as many sizes and styles of implementation as possible.},
+nor is it a standalone ISA.
