Establish new branch for working on the reference implementation spec.
 On branch impl/uarch-spec
 Changes to be committed:
	modified:   docs/Makefile
	modified:   docs/crypto-ise.tex
	new file:   docs/ise-implementation.tex

--- a/docs/crypto-ise.tex
+++ b/docs/crypto-ise.tex
@@ -5,11 +5,16 @@
 \usepackage{biblatex}
 \addbibresource{references.bib}
 
-\title{SCARV: RISC-V Crypto ISE}
+\title{SCARV: RISC-V Crypto ISE \\ Specification}
 
 \begin{document}
 
 \maketitle
+
+\abstract{
+This document contains the specification for a new Cryptographic
+Instruction Set Extension for the RISC-V Instruction Set Architecture.
+}
 \tableofcontents
 
 \section{Introduction}
