--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -40,9 +40,11 @@
 
 \newcommandx{\ASM}[1]{{\tt #1}}
 
+% Shorter bit box commands for encoding description
 \newcommandx{\BB}[2]{\bitbox{#1}{{\tt #2}}}
 \newcommandx{\BH}[2]{\bitbox{#1}{{\bf #2}}}
 
+% Assembly instruction definition
 \newcommandx{\INST}[2]{
   \ASM{#1}
   \\
