stop tables moving across sections

--- a/docs/crypto-ise.tex
+++ b/docs/crypto-ise.tex
@@ -29,7 +29,7 @@ Instruction Set Extension for the RISC-V Instruction Set Architecture.
 
 \printbibliography
 
-
+\newpage
 \section{Changelog}
 \import{./}{crypto-ise.changelog.tex}
 \end{document}
