--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -5,6 +5,7 @@
 \usepackage{bytefield}
 \usepackage{caption}
 \usepackage{currfile}
+\usepackage{float}
 \usepackage[margin={2cm}]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
